force-app/main/default/objects/Knowledge__kav/fields/Cantidad_porciones_receta__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_porciones_receta__c</fullName>
    <description>Cantidad de porciones de cada receta oncología portal pacientes</description>
    <label>Cantidad porciones receta</label>
    <type>TextArea</type>
</CustomField>