force-app/main/default/objects/Knowledge__kav/fields/Consejos__c.field-meta.xml
<CustomField>
    <fullName>Consejos__c</fullName>
    <description>Consejos de artículo (Ejercicios)</description>
    <label>Consejos</label>
    <type>TextArea</type>
</CustomField>