force-app/main/default/objects/Knowledge__kav/fields/Consejos_recetas__c.field-meta.xml
<CustomField>
    <fullName>Consejos_recetas__c</fullName>
    <description>consejos de recetas oncologia portal pacientes</description>
    <label>Consejos recetas</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>