force-app/main/default/objects/Knowledge__kav/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Descripción del articulo en Portal de Pacientes</description>
    <label>Descripción</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>