force-app/main/default/objects/Knowledge__kav/fields/Ejercicio__c.field-meta.xml
<CustomField>
    <fullName>Ejercicio__c</fullName>
    <description>Nombre de ejercicio de actividad fisica</description>
    <label>Ejercicio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>