force-app/main/default/objects/Knowledge__kav/fields/Historia_tecnica_peinado__c.field-meta.xml
<CustomField>
    <fullName>Historia_tecnica_peinado__c</fullName>
    <label>Historia técnica peinado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>