force-app/main/default/objects/Knowledge__kav/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <description>imagen de artículo en Portal de Pacientes</description>
    <label>Imagen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>