force-app/main/default/objects/Knowledge__kav/fields/Imagen_alergenos__c.field-meta.xml
<CustomField>
    <fullName>Imagen_alergenos__c</fullName>
    <label>Imagen alergenos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>