force-app/main/default/objects/Knowledge__kav/fields/Imagen_producto__c.field-meta.xml
<CustomField>
    <fullName>Imagen_producto__c</fullName>
    <description>Imagen de producto para descripcion receta</description>
    <label>Imagen producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>