force-app/main/default/objects/Knowledge__kav/fields/Ingredientes_de_recetas__c.field-meta.xml
<CustomField>
    <fullName>Ingredientes_de_recetas__c</fullName>
    <description>Ingredientes para Recetas de Portal de Pacientes</description>
    <label>Ingredientes de recetas</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>