force-app/main/default/objects/Knowledge__kav/fields/Preparacion_receta__c.field-meta.xml
<CustomField>
    <fullName>Preparacion_receta__c</fullName>
    <description>Preparación de receta</description>
    <label>Preparación receta</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>