force-app/main/default/objects/Knowledge__kav/fields/Tiempo_preparacion_receta__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_preparacion_receta__c</fullName>
    <description>Tiempo de preparación de receta oncología portal pacientes</description>
    <label>Tiempo preparación receta</label>
    <type>TextArea</type>
</CustomField>