force-app/main/default/objects/Knowledge__kav/fields/Tipo_de_articulo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_articulo__c</fullName>
    <description>Tipos de artículos para el Portal de Pacientes</description>
    <label>Tipo de Artículo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Técnicas de belleza (Oncología)</fullName>
            </value>
            <value>
                <fullName>Recetas (Oncología)</fullName>
            </value>
            <value>
                <fullName>Ejercicios (Oncología)</fullName>
            </value>
            <value>
                <fullName>Recetas (Terapia Cetogénica)</fullName>
            </value>
            <value>
                <fullName>Recetas (Disfagia)</fullName>
            </value>
            <value>
                <fullName>Recetas (Alergia)</fullName>
            </value>
            <value>
                <fullName>Videos (Terapia Cetogénca)</fullName>
            </value>
            <value>
                <fullName>Recetas</fullName>
                <isActive>false</isActive>
                <label>Recetas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>