force-app/main/default/objects/Knowledge__kav/fields/Tipo_de_receta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_receta__c</fullName>
    <description>Tipos de recetas</description>
    <label>Tipo de receta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sopas</fullName>
            </value>
            <value>
                <fullName>Principales</fullName>
            </value>
            <value>
                <fullName>Bebidas</fullName>
            </value>
            <value>
                <fullName>Postres</fullName>
            </value>
            <value>
                <fullName>Desayuno</fullName>
            </value>
            <value>
                <fullName>Merienda</fullName>
            </value>
            <value>
                <fullName>Almuerzo</fullName>
            </value>
            <value>
                <fullName>Cena</fullName>
            </value>
            <value>
                <fullName>Salado</fullName>
            </value>
            <value>
                <fullName>Mayores a 6 meses</fullName>
            </value>
            <value>
                <fullName>Mayores a 12 meses</fullName>
            </value>
            <value>
                <fullName>4:1</fullName>
            </value>
            <value>
                <fullName>2.5:1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>