force-app/main/default/objects/Knowledge__kav/fields/URL_Video__c.field-meta.xml
<CustomField>
    <fullName>URL_Video__c</fullName>
    <description>Videos de recetas</description>
    <label>URL Video</label>
    <length>255</length>
    <type>Text</type>
</CustomField>